gccida/c0/true_regnum
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/true_regnum/src/jump.c:2889:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/true_regnum/src/jump.c:2889:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/true_regnum/src/jump.c:2891:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/true_regnum/src/jump.c:2891:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/true_regnum/src/obj/jump.o] Error 1
